--- a/main.css
+++ b/main.css
@@ -111,7 +111,10 @@ header ul li a:hover{
 /*ABOUT US*/
 
 .grid-container{
-    background: url(imgs/aboutus.jpg) cover no-repeat;
+    background: url(imgs/aboutus.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 100vh;
     min-height: 800px;
     display: grid;
