--- a/main.css
+++ b/main.css
@@ -202,7 +202,7 @@ header ul li a:hover{
     padding-top: 50px;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-row-gap: 20px;
     grid-column-gap: 10px;
     align-items: center;
@@ -277,6 +277,8 @@ header ul li a:hover{
 .calendar-container{
     padding-top: 56.25%;
     overflow: hidden;
+    min-width: 400px;
+    min-height: 400px;
     margin: auto;
     position: relative;
 }
@@ -287,6 +289,8 @@ header ul li a:hover{
     left: 0;
     height: 100%;
     width: 100%;
+    min-width: 400px;
+    min-height: 400px;
     position: absolute;
     padding-bottom: 100px;
 }
@@ -296,7 +300,7 @@ header ul li a:hover{
 
 /*CONTACT*/
 .contact{
-    height: 200px;
+    height: 225px;
     background-color: #1a1a1a;
     border-top: 5px solid #6EB5FF;
     position: relative;
@@ -329,7 +333,7 @@ header ul li a:hover{
 .contact-links{
     position: absolute;
     margin-left: -15px;
-    bottom: 15px;
+    bottom: 20px;
 }
 
 .contact-links li{
