--- a/main.css
+++ b/main.css
@@ -38,14 +38,15 @@ header{
     float: left;
     color: #000;
     padding-top: 4px;
+
+    font-family: 'Oswald', sans-serif;
 }
 
 header ul{
     margin-left: auto;
     position: absolute;
     right: 0;
-    top: 0;
-    margin-top: 8px;
+    top: 12px;
 }
 
 header ul li{
@@ -95,7 +96,7 @@ header ul li a:hover{
     color: white;
     text-align: center;
     max-width: 600px;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-size: 2.5em;
 }
 
@@ -193,6 +194,8 @@ header ul li a:hover{
 .section-title-a{
     font-family: 'Raleway', sans-serif;
     text-align: center;
+    width: 80%;
+    margin: auto;
     font-weight: 1000;
 }
 
@@ -211,6 +214,7 @@ header ul li a:hover{
 .card{
     display: flex;
     background-color: #282828;
+    border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.336);
 }
 
