--- a/main.css
+++ b/main.css
@@ -205,7 +205,7 @@ header ul li a:hover{
     padding-top: 50px;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
     grid-row-gap: 20px;
     grid-column-gap: 10px;
     align-items: center;
@@ -300,6 +300,71 @@ header ul li a:hover{
 }
 
 /*MEMORIES*/
+.memories{
+    height: 100vh;
+    min-height: 700px;
+}
+
+.memories-grid-container{
+    width: 80%;
+    margin: auto;
+    padding-top: 50px;
+
+    display: grid;
+    grid-template-columns: repeat(5, minmax(100px, 1fr));
+    grid-column-gap: 10px;
+}
+
+.mem-card{
+    overflow: hidden;
+    height: 500px;
+    max-height: 500px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.mem-card-1{
+    background: url(imgs/Memories/involve_banner.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.mem-card-2{
+    background: url(imgs/Memories/SPM_banner.JPG);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.mem-card-3{
+    background: url(imgs/Memories/review_banner.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.mem-card-4{
+    background: url(imgs/Memories/region_banner.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.mem-card-5{
+    background: url(imgs/Memories/pcb_banner.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.mem-event-name{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center; 
+    background-color: rgba(0, 0, 0, 0.5);
+    Color: white;
+    font-weight: 900;   
+}
 
 
 /*CONTACT*/
