--- a/main.css
+++ b/main.css
@@ -205,7 +205,7 @@ header ul li a:hover{
     padding-top: 50px;
 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
     grid-row-gap: 20px;
     grid-column-gap: 10px;
     align-items: center;
@@ -306,12 +306,13 @@ header ul li a:hover{
 }
 
 .memories-grid-container{
-    width: 80%;
+    width: 90%;
     margin: auto;
+    align-items: center;
     padding-top: 50px;
 
     display: grid;
-    grid-template-columns: repeat(5, minmax(100px, 1fr));
+    grid-template-columns: repeat(5, minmax(75px, 1fr));
     grid-column-gap: 10px;
 }
 
@@ -350,6 +351,10 @@ header ul li a:hover{
     background-repeat: no-repeat;
 }
 
+.mem-card-4 a{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .mem-card-5{
     background: url(imgs/Memories/pcb_banner.jpg);
     background-position: center;
@@ -366,6 +371,11 @@ header ul li a:hover{
     font-weight: 900;   
 }
 
+@media (max-width: 840px){
+    .mem-card{
+        font-size: 14px;
+    }
+}
 
 /*CONTACT*/
 .contact{
